--- a/prova_alexandre.csproj
+++ b/prova_alexandre.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="fm.Extensions.HttpClient" Version="4.0.0" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.10" />
